Ajustes na validação de cpf e inclusão swagger para controle de rotas
